Upload my first page onto github.

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,20 @@
-title:            Site Title
+title:            oYoZoHo
 description:      Describe your website here.
 disqus_shortname: 
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: https://oyozoho.github.io
+url:              https://oyozoho.github.io
+#url:              http://localhost:4000
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Jeffery Yang
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
-  email:          you@email.com
+#  bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
+  bio:            "Just making bugs then fix them!"
+  email:          oYoZoHo@163.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
@@ -35,7 +37,8 @@ google_verify:
 bing_verify:         
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+#timezone:    America/New_York
+timezone:    Asia/Shanghai
 future:      false  # publish future dated posts --  true, false (default) 
 highlighter: rouge
 markdown:    kramdown
